# Tarefa-Interrup-o-etc-embarcatech

./: CMakeLists.txt  README.md  diagram.json  main.c  wokwi.toml
